# com6104-project

./: .env.example  .gitignore  .qwenignore  README.md  README.zh-CN.md  pyproject.toml  test_timing.py
dev-tools/: fetch_0243_postfix.py  llm_stress_test.py  lyric-convert.py
mcp-servers/jyutping/: server.py
mcp-servers/jyutping/data/: postfix_m1_all.json
mcp-servers/lyrics-validator/: server.py
mcp-servers/melody-mapper/: server.py
mcp-servers/midi-analyzer/: server.py
prompts/: WORD_SELECTOR_USAGE.md  compose-task.md  jyutping-mapper.md  lyrics-composer-task.md  lyrics-composer.md  midi-analyser.md  system.md  validate-task.md  word-selector-task.md
prompts/agents/: lyrics-composer-revision-task.md  lyrics-composer-task.md  validate-task.md  validator.md
src/: main.py
src/agent/: __init__.py  base_agent.py  config.py  errors.py  memory.py  orchestrator.py  registry.py  workflow_graph.py
src/agent/agents/: __init__.py  lyrics_composer.py  validator.py  word_selector.py
src/agent/utils/: constraint_filter.py  jyutping_batch.py  mcp.py
src/gui/: __init__.py  app.py  components.py  handlers.py  pipeline.py  progress.py
test/: README.md
test/lyrics/: R00317G2.clean.txt  R00317G2.kanji-yomi.txt  X54896G2.clean.txt  X54896G2.kanji-yomi.txt  ドラえもんのうた.kanji-yomi.txt
test/lyrics/raw/: R00317G2.txt  X54896G2.txt  ドラえもんのうた.txt
test/midi/: R00317G2.mid  X54896G2.mid  ドラえもんのうた.mid
tests/: conftest.py  test_constraint_filter.py  test_jyutping.py  test_jyutping_snapshot.py  test_llm_provider.py  test_lyrics_composer.py  test_melody_mapper.py  test_midi_analyzer.py  test_orchestrator_policies.py  test_phrase.py  test_regression_baseline.py  test_word_selector.py  test_workflow_graph.py
