[project]
name = "cantonese-lyrics-agent"
version = "0.1.0"
description = "AI Agent for automatic Cantonese lyrics generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "httpx>=0.27.0",
    "mido>=1.3.0",
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "xfmido>=0.0.2",
    "langgraph>=1.1.2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
cantonese-lyrics-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
